--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Poke-Tinder</string>
+    <color name="ic_launcher_background">#000000</color>
+    <string name="app_name">PokeTinderNew</string>
 </resources>
